# art-director-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/art_director/: __init__.py  __main__.py  config.py  critic.py  diagram_renderer.py  executor.py  pipeline.py  planner.py  registry.py  schemas.py  server.py  utils.py
tests/: conftest.py  test_config.py  test_critic.py  test_diagram_renderer.py  test_executor.py  test_live_integration.py  test_main.py  test_pipeline.py  test_planner.py  test_registry.py  test_schemas.py  test_server.py  test_utils.py
